ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accommodation-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: accommodations.finki.ukim.mk
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 3000
